Add YAML storage before creation